Changelog
=========


2.4.1 (unreleased)
------------------

- Fix setting defaults for choices with named vocabularies on inbound mails.
  [phgross]


2.4.0 (2016-07-19)
------------------

- Mark inbound request with a marker interface.
  [phgross]

- Drop Plone 4.1 support.
  [phgross]

- Fix German and French FTI title of "ftw.mail.mail".
  [mbaechtold]


2.3.7 (2015-09-08)
------------------

- Fix broken <meta /> tags in text/html MIME parts.
  [lgraf]


2.3.6 (2015-09-02)
------------------

- Sort Mailtab so the newest Mail is the first Item.
  [tschanzt]


2.3.5 (2015-08-20)
------------------

- Make upgrade step to fix `message.contentType` more defensive to avoid
  trouble during upgrades caused by caching weirdness.
  [lgraf]


2.3.4 (2015-08-19)
------------------

- Make sure message.contentType is stored as `str`, not `unicode`. Otherwise
  this will result in "Wrong contained type" when trying to save the object
  again. Includes Upgrade-Step to fix existing objects.
  [lgraf]


2.3.3 (2015-08-03)
------------------

- get_header(): Fix up RFC 2047 encoded words separated by 'CRLF LWSP'
  (which is fine according to the RFC) by replacing the CRLF with a
  SPACE so decode_header can parse them correctly.
  This works around a bug in decode_header that has been fixed in 3.3.
  See http://bugs.python.org/issue4491 and its duplicate.
  [lgraf]


2.3.2 (2015-06-30)
------------------

- Make RegEx for Apple Partial Encoding regex more specific so we don't
  accidentally remove quotes around header parts that need them.
  [lgraf]

- Added test for zip export.
  [lknoepfel]


2.3.1 (2015-03-12)
------------------

- Refactor mail view to include all HTML parts.
  [jone]


2.3.0 (2015-03-02)
------------------

- Enable referencablebehavior for mails.
  [jone]


2.2.3 (2014-10-24)
------------------

- Parse <style> tags inside the mail using the `premailer` transform.
  [phgross]
