@@ -5,6 +5,9 @@ Changelog
 2.4.1 (unreleased)
 ------------------
 
+- Move functionality to create mailed-in mails to an adapter to allow
+  easier customization. [deiferni]
+
 - Fix setting defaults for choices with named vocabularies on inbound mails.
   [phgross]
 
